--- a/configuration.yml
+++ b/configuration.yml
@@ -11,7 +11,7 @@
 # predefined ansible tasks are optimized for Ubuntu and may fail when using a
 # base box other than a Ubuntu box.
 #
-box: bento/ubuntu-18.04
+box: ubuntu/bionic64
 server_admin: d.schultheis@kabel-salat.net
 
 #
@@ -59,7 +59,7 @@ cpus: 1
 # Google Chrome.
 #
 hostname: typo3-bootstrap.test
-ip: 192.168.101.100
+ip: 192.168.101.104
 
 #
 # Enable/disable TLS encryption
