--- a/configuration.yml
+++ b/configuration.yml
@@ -177,7 +177,7 @@ typo3_extensions:
 # to install them.
 #
 typo3_community_extensions:
-  - {composer_package: typo3/cms-introduction, extension_key: introduction, constraint: ~}
+  - {composer_package: typo3/cms-introduction, extension_key: introduction, constraint: 4.0.1}
   # - {composer_package: arminvieweg/dce, extension_key: dce, constraint: ~}
   # - {composer_package: bk2k/bootstrap-package, extension_key: bootstrap_package, constraint: ~}
   # - {composer_package: clickstorm/go_maps_ext, extension_key: go_maps_ext, constraint: ~}
