Refactor ansible tasks into role
Refactor ansible tasks for provision into role to provide
the possibility to add roles in the future.

--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -1,2 +1,7 @@
 ---
-- import_playbook: playbooks/setup.yml
+- hosts: all
+  become: yes
+
+  tasks:
+    - include_role:
+        name: project_setup
